Fixed typo in the postgresql-8.3 template.

--- a/cookbooks/postgresql/templates/default/postgresql-8.3.erb
+++ b/cookbooks/postgresql/templates/default/postgresql-8.3.erb
@@ -2,7 +2,7 @@
 PGDATA="<%= @basedir %>/data"
 
 # PostgreSQL User
-PGUSER="<%= @owner %>"
+PGUSER="<%= @user %>"
 
 # PostgreSQL Group
 PGGROUP="<%= @group %>"
