--- a/cookbooks/postgresql/templates/default/postgresql.conf.erb
+++ b/cookbooks/postgresql/templates/default/postgresql.conf.erb
@@ -106,7 +106,7 @@ max_connections = 100			# (change requires restart)
 
 shared_buffers = <%= @shared_buffers %>MB			# min 128kB or max_connections*16kB
 					# (change requires restart)
-#temp_buffers = 8MB			# min 800kB
+#temp_buffers = <%= @temp_buffers %>MB			# min 800kB
 #max_prepared_transactions = 5		# can be 0 or more
 					# (change requires restart)
 # Note:  Increasing max_prepared_transactions costs ~600 bytes of shared memory
@@ -218,7 +218,7 @@ effective_cache_size = <%= @effective_cache_size %>MB
 
 # - Other Planner Options -
 
-#default_statistics_target = 10		# range 1-1000
+default_statistics_target = <%= @default_statistics_target %>		# range 1-1000
 #constraint_exclusion = off
 #from_collapse_limit = 8
 #join_collapse_limit = 8		# 1 disables collapsing of explicit 
